[package]
name = "pahi-olin"
version = "0.1.0"
authors = ["Christine Dodrill <me@christine.website>"]
edition = "2018"
description = "The pa'i runtime API bindings"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
log = "0.4"
num-derive = "0.2"
num-traits = "0.2"
rand = "0.7"
url = "2"
wasmer-runtime = "0.13"
