[package]
name = "pahi-olin"
version = "0.1.1"
authors = ["Christine Dodrill <me@christine.website>"]
edition = "2018"
description = "The pa'i runtime API bindings"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
log = "0.4"
num-derive = "0.3"
num-traits = "0.2"
openssl = "0.10.30"
rand = "0.7"
url = "2"
wasmer-runtime = "0.17"
