[package]
name = "pahi"
version = "0.1.0"
authors = ["Christine Dodrill <me@christine.website>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cachedir = "0.2.0"
env_logger = "0.7.1"
log = "0.4"
num-derive = "0.3"
num-traits = "0.2"
structopt = "0.3"
wasmer-runtime = "0.16"

pahi-olin = {path = "../pahi-olin"}
