[package]
name = "pahi"
version = "0.1.0"
authors = ["Christine Dodrill <me@christine.website>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.5"
cachedir = "0.1.1"
env_logger = "0.8.1"
log = "0.4"
num-derive = "0.3"
num-traits = "0.2"
structopt = "0.3"
wasmer-runtime = "0.17"

pahi-olin = {path = "../pahi-olin"}
