[package]
name = "pahi"
version = "0.2.0"
authors = ["Christine Dodrill <me@christine.website>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.5"
env_logger = "0.8.3"
log = "0.4"
structopt = "0.3"

pahi-olin = { path = "../pahi-olin" }
